2010-03-12  Miloslav Trmač  <mitr@redhat.com>

	* m4/gnulib-cache.m4 (gl_MODULES): Add `progname'.
	* tmpwatch.c (main): Call set_program_name.

2010-03-09  Miloslav Trmač  <mitr@redhat.com>

	* lib/strerror.c: Fix missing #include <limits.h>.

2010-03-03  Miloslav Trmač  <mitr@redhat.com>

	* tmpwatch.c (struct exclusion): Use `const char *' for `dir' and
	`file'.
	(message): Use `const char *' for `format'.
	(cleanupDirectory): Don't use two local variables named `dir'.
	(usage): Use attribute__((noreturn)).

	* tmpwatch.c (xmalloc): Remove (use the gnulib implementation).
	(absolute_path): Use xstrdup() from gnulib.
	* m4/gnulib-cache.m4 (gl_MODULES): Add `xalloc'.

	* AUTHORS: New file.
	* configure.ac, Makefile.am: New files, based on patches by Ben
	Walton <bwalton@artsci.utoronto.ca>.
	* tmpwatch.c: #include <config.h>.  Guard <mntent.h> and <paths.h>
	with HAVE_MNTENT_H and HAVE_PATHS_H.  Use PACKAGE_VERSION.  Based
	on patches by Ben Walton <bwalton@artsci.utoronto.ca>.
	* install-sh
	* Makefile
	* README.ports: Remove.

2009-12-22  Miloslav Trmač  <mitr@redhat.com>

	* Makefile (VERSION): Release 2.9.17.
	* NEWS: Update.

	* tmpwatch.c (check_fuser): Use PATH_MAX, not FILENAME_MAX; the POSIX
	definition of FILENAME_MAX does not match the intended usage.
	(check_fuser): Prefix filename with "./" to handle filenames starting
	with '-'.

2009-10-15  Miloslav Trmač  <mitr@redhat.com>

	* Makefile (VERSION): Version 2.9.16.
	* NEWS: Update.

	* tmpwatch.c (main): Support 'm' unit specifier, meaning "minutes".
	* tmpwatch.8: Document the 'm' unit specifier.

	* tmpwatch.c (struct excluded_pattern, excluded_patterns)
	(excluded_patterns_tail, main): New option --exclude-pattern.
	(cleanupDirectory): Implement --exclude-pattern.
	* tmpwatch.8: Document --exclude-pattern.

2009-05-22  Miloslav Trmač  <mitr@redhat.com>

	* Makefile (VERSION): Version 2.9.15.
	* NEWS: Update.

2009-03-25  Miloslav Trmač  <mitr@redhat.com>
